...
        ),
        Align(
          alignment: AlignmentGeometry.bottomLeft,
          child: tiamat.Tooltip(
            text: widget.voip.room.isE2EE
                ? "This room is encrypted, your call is secure and private"
                : "This room is not encrypted, your call may be accessible by the server operator",
            child: Padding(
              padding: const EdgeInsets.all(8.0),
              child: Row(
                mainAxisSize: MainAxisSize.min,
                children: [
                  // Vommet: same marker as the room header.
...
